--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "json-server": "^0.17.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
+  },
+  "engines": {
+    "node": "v16.13.2",
+    "npm": "8.1.2"
   }
 }
