--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "eslint": "8.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -18,12 +17,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run dev\"",
-    "dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server -w src/server/db.json -p 3001"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,8 +42,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
-    "concurrently": "^7.4.0",
-    "json-server": "^0.17.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
